[package]
name = "mev-lib"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
cached = { workspace = true }
dashmap = { workspace = true }
jito-core = { workspace = true }
jito-protos = { workspace = true }
jito-relayer = {workspace = true}
bincode = {workspace = true}
log = { workspace = true }
prost-types = { workspace = true }
solana-core = { workspace = true }
solana-metrics = { workspace = true }
solana-perf = { workspace = true }
solana-sdk = { workspace = true }
solana-program = {workspace = true}
solana-client = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
spl-token = {workspace = true}
spl-memo = {workspace = true}
spl-associated-token-account = {workspace = true}
solana-account-decoder = {workspace = true}
solana-transaction-status = {workspace = true}
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }