[package]
name = "mev-lib"
authors = [
    "Morgan Metz <morgan.metz@eyekon.xyz>",
]
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
cached = { workspace = true }
dashmap = { workspace = true }
jito-core = { workspace = true }
jito-protos = { workspace = true }
jito-relayer = {workspace = true}
bincode = {workspace = true}
log = { workspace = true }
prost-types = { workspace = true }
solana-core = { workspace = true }
solana-metrics = { workspace = true }
solana-perf = { workspace = true }
solana-sdk = { workspace = true }
solana-program = {workspace = true}
solana-client = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
spl-token = {workspace = true}
spl-memo = {workspace = true}
spl-associated-token-account = {workspace = true}
solana-account-decoder = {workspace = true}
solana-transaction-status = {workspace = true}
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
byteorder = "1.4"
hex = "0.4"
lazy_static = "1.4.0"
anchor-client = "0.31.1"
anchor-lang = "0.31.1"
borsh = "0.10.3"
uuid = { version = "1.16.0", features = ["v4"]}
jito-sdk-rust = "0.2.1"
base64 = "0.22.1"